terraform/modules/jaeger/files/jaeger-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ingress
  namespace: ${jaeger_namespace}
spec:
  ingressClassName: traefik
  rules:
  - host: ${jaeger_domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${jaeger_release}
            port:
              number: 16686
